OpenEBTS/OpenEBTS/OpenEBTS.h

	typedef wchar_t		TCHAR;
	typedef char		TCHAR;
  typedef struct CIWTransaction CIWTransaction;

  typedef struct CIWVerification CIWVerification;


//************************************************************/
//                                                            /
//                  Transaction Management                    /
//                                                            /
//************************************************************/


OPENEBTS_API int WINAPI IWNew(
	const TCHAR* szTransactionType,			// Type of transaction
	CIWVerification* pIWVer,				// Verification pointer
	CIWTransaction** ppIWTrans				// Pointer to transaction pointer
);


OPENEBTS_API int WINAPI IWRead(
	const TCHARPATH *szPath,				// Path of transaction file
	CIWVerification *pIWVer,				// Verification pointer
	CIWTransaction **ppIWTrans				// Pointer to transaction pointer
);


OPENEBTS_API int WINAPI IWReadMem(
	BYTE *pBuffer,							// Pointer to transaction buffer
	int nBufferSize,						// Size of the transaction buffer
	CIWVerification *pIWVer,				// Verification pointer
	CIWTransaction **ppIWTrans				// Pointer to transaction pointer
);


OPENEBTS_API int WINAPI IWClose(
	CIWTransaction **ppIWTrans				// Pointer to transaction pointer
);


OPENEBTS_API int WINAPI IWWriteMem(
   CIWTransaction* pIWTrans,				// Transaction pointer
   BYTE** ppBuffer,							// Pointer to Transaction buffer pointer
   int *pSize								// Size of buffer
);
											

OPENEBTS_API int WINAPI IWMemFree(
   BYTE** ppBuffer							// Pointer to Transaction buffer pointer
);
											


OPENEBTS_API int WINAPI IWAddRecord(
	CIWTransaction* pIWTrans,				// Transaction pointer
	int nRecordType,						// Record type
	int* pnRecordIndex						// New record index
);


OPENEBTS_API int WINAPI IWGetRecordTypeCount(
	CIWTransaction* pIWTrans,				// Transaction pointer
	int nRecordType,						// Record type
	int* pnRecordTypeCount					// Number of records returned
);


OPENEBTS_API int WINAPI IWWrite(
	CIWTransaction* pIWTrans,				// Transaction pointer
	const TCHARPATH* szPath					// Path of transaction file to create
);


OPENEBTS_API int WINAPI IWWriteXML(
	CIWTransaction* pIWTrans,				// Transaction pointer
	const TCHARPATH* szPath,				// Path of transaction file to create
	int bValidate							// Validate produced XML against NIST schemas
);


OPENEBTS_API int WINAPI IWGetNumRecords(
	CIWTransaction* pIWTrans,				// Transaction pointer
	int* pnRecords							// Number of records returned
);


OPENEBTS_API int WINAPI IWReadVerification(
	const TCHARPATH* szPath,				// Path name to file
	CIWVerification** ppIWVer,				// Pointer to a verification pointer
	int nMaxParseError,						// Size of szParseError
	TCHAR* szParseError						// Potential errors encountered in verification file
);


OPENEBTS_API int WINAPI IWCloseVerification(
	CIWVerification **ppIWVer				// Pointer to verification pointer
);


OPENEBTS_API int WINAPI IWSetVerification(
	CIWTransaction *pIWTrans,				// Transaction pointer
	CIWVerification *pIWVer					// Verification pointer
);


OPENEBTS_API int WINAPI IWGet(
	CIWTransaction* pIWTrans,				// Transaction pointer
	const TCHAR* szMnemonic,				// Field identifier
	const TCHAR** pszData,					// Pointer to a string of data
	int nIndex,								// Index value
	int nRecordIndex						// Record index
);


OPENEBTS_API int WINAPI IWSet(
	CIWTransaction* pIWTrans,				// Transaction pointer
	const TCHAR* szMnemonic,				// Field identifier
	const TCHAR* szData,					// String of data
	int nStartIndex,						// Where to start inserting data
	int nRecordIndex						// Record index
);


// IWRemove and IWRemoveItem are partially implemented.
// They will only remove the entire field at present, at some
// point we may want to remove subfields and subitems within
// fields.
OPENEBTS_API int WINAPI IWRemove(
	CIWTransaction* pIWTrans,				// Transaction pointer
	const TCHAR* szMnemonic,				// Field identifier
	int nIndex,							// Index value, pass 0 to remove entire field
	int nRecordIndex						// Record index
);


OPENEBTS_API int WINAPI IWOccurrences(
	CIWTransaction* pIWTrans,				// Transaction pointer
	const TCHAR* szMnemonic,				// Field identifier
	int* pnOccurrences,						// Number of occurrences
	int nRecordIndex						// Record index
);


OPENEBTS_API int WINAPI IWVerify(
	CIWTransaction* pIWTrans				// Transaction pointer
);


//************************************************************/
//                                                            /
//						Data Access                           /
//                                                            /
//************************************************************/

OPENEBTS_API int WINAPI IWNumSubfields(
	CIWTransaction* pIWTrans,				// Transaction pointer
	int nRecordType,						// Record type
	int nRecordIndex,						// Record index
	int nField,								// Field number
	int* pnCount							// The number of subfields/items present
);


OPENEBTS_API int WINAPI IWNumItems(
	CIWTransaction* pIWTrans,				// Transaction pointer
	int nRecordType,						// Record type
	int nRecordIndex,						// Record index
	int nField,								// Field number
	int nSubfield,							// Subfield number
	int* pnCount							// The number of subfields/items present
);


OPENEBTS_API int WINAPI IWFindItem(
	CIWTransaction* pIWTrans,				// Transaction pointer
	int nRecordType,						// Record type
	int nRecordIndex,						// Record index
	int nField,								// Field number
	int nSubfield,							// Subfield number
	int nItem,								// Item Number
	const TCHAR** pszData					// Pointer to a string of data
);


OPENEBTS_API int WINAPI IWSetItem(
	CIWTransaction* pIWTrans,				// Transaction pointer
	const TCHAR* szData,					// String of data
	int nRecordType,						// Record type
	int nRecordIndex,						// Record index
	int nField,								// Field number
	int nSubfield,							// Subfield number
	int nItem								// Item number
);


OPENEBTS_API int WINAPI IWRemoveItem(
	CIWTransaction* pIWTrans,				// Transaction pointer
	int nRecordType,						// Record type
	int nRecordIndex,						// Record index
	int nField,								// Field number
	int nSubfield,							// Subfield number
	int nItem								// Item number
);


OPENEBTS_API int WINAPI IWGetNumFields(
	CIWTransaction* pIWTrans,				// Transaction pointer
	int nRecordType,           				// Record type
	int nRecordIndex,						// Record index
	int* pnCount							// The number of fields present
);


OPENEBTS_API int WINAPI IWGetNextField(
	CIWTransaction* pIWTrans,				// Transaction pointer
	int nRecordType,           				// Record type
	int nRecordIndex,						// Record index
	int nField,								// Field number
	int* pnNextField						// Next field number after 'Field'
);
 

//************************************************************/
//                                                            /
//                        Images                              /
//                                                            /
//************************************************************/

OPENEBTS_API int WINAPI IWGetImage(
	CIWTransaction* pIWTrans,				// Transaction pointer
	int nRecordType,						// Record type
	int nRecordIndex,						// Record index
	const TCHAR** pszStorageFormat,			// Three character image format
	int* pnLength,							// Data length
	const void** Data						// Pointer to a pointer of binary data
);


OPENEBTS_API int WINAPI IWSetImage(
	CIWTransaction* pIWTrans,				// Transaction pointer
	int nRecordType,						// Record type
	int nRecordIndex,						// Record index
	const TCHAR* szInputFormat,				// Three character image format
	int nLength,							// Data length
	void* pData,							// Pointer to binary data
	const TCHAR* szStorageFormat,			// Three character extension of stored format type
	float fCompression						// Image compression value
);


OPENEBTS_API int WINAPI IWImportImage(
	CIWTransaction* pIWTrans,				// Transaction pointer
	int nRecordType,						// Record type
	int nRecordIndex,						// Record index
	const TCHARPATH* szPath,				// Path name to file
	const TCHAR* szStorageFormat,			// Three character extension of stored format type
	float fCompression,						// Image compression value
	const TCHAR* szInputFormat				// Three character extension for input image format
);


OPENEBTS_API int WINAPI IWExportImage(
	CIWTransaction* pIWTrans,				// Transaction pointer
	int nRecordType,						// Record type
	int nRecordIndex,						// Record index
	const TCHARPATH* szPath,				// Path name to file
	const TCHAR* szOutputFormat				// Three character extension for output image format
);


OPENEBTS_API int WINAPI IWExportImageMem(
	CIWTransaction* pIWTrans,				// Transaction pointer
	int nRecordType,						// Record type
	int nRecordIndex,						// Record index
	BYTE** ppBuffer,						// Pointer to image buffer pointer
	int *pSize,								// Size of buffer
	const TCHAR* szOutputFormat				// Three character extension for outut image format
);


OPENEBTS_API int WINAPI IWGetImageInfo(
	CIWTransaction* pIWTrans,				// Transaction pointer 
	int nRecordType,						// Record type 
	int nRecordIndex,						// Record index 
	const TCHAR** pszStorageFormat,			// Three character extension of stored format type 
	int* pnLength,							// Data length
	int* pnHLL,								// Horizontal line length
	int* pnVLL,								// Vertical line length
	int* pnBitsPerPixel						// Number of bits per image pixel 
);


OPENEBTS_API int WINAPI IWDeleteRecord(
	CIWTransaction* pIWTrans,				// Transaction pointer 
	int nRecordType,						// Record type 
	int nRecordIndex						// Record index 
);


OPENEBTS_API int WINAPI MemFree(BYTE* pImage);


//************************************************************/
//                                                            /
//                   Error Reporting                          /
//                                                            /
//************************************************************/

OPENEBTS_API int WINAPI IWGetErrorCount(
	CIWTransaction* pIWTrans					// Transaction pointer
);


OPENEBTS_API int WINAPI IWGetError(
	  CIWTransaction* pIWTrans,				// Transaction pointer
	  int Index,							// Zero based index value
	  int* Code,							// Error code
	  const TCHAR** pszDesc					// Error description string
);